[project]
name = "BASTA"
description = "The BAyesian STellar Algorithm"
dynamic = ["version"]
authors = [
  { name="The BASTA Team", email="jakob@phys.au.dk" },
]
requires-python = ">=3.10"
dependencies = [
    "astropy>=6.1.4",
    "black>=24.10.0",
    "bottleneck>=1.4.2",
    "dustmaps>=1.0.13",
    "h5py>=3.12.1",
    "healpy>=1.18.0",
    "matplotlib>=3.9.2",
    "numpy>=2.1.1",
    "pre-commit>=4.0.1",
    "scikit-learn>=1.5.2",
    "scipy>=1.14.1",
    "tqdm>=4.67.0",
]

[project.scripts]
BASTArun = "basta.run:main"
BASTAmultirun = "basta.run:multi"
BASTAdownload = "basta.downloader:main"
BASTAexamples = "basta.downloader_examples:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.version]
path = "basta/__about__.py"
