[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/basta/__about__.py"


[project]
name = "BASTA"
description = "The BAyesian STellar Algorithm"
dynamic = ["version"]
authors = [
  { name="The BASTA Team", email="jakob@phys.au.dk" },
]
maintainers = [
  { name="Jakob Lysgaard Rørsted", email="jakob@phys.au.dk" },
]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
  # Full list on https://pypi.org/classifiers/
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Astronomy",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
  "astropy>=6.1.4",
  "black>=24.10.0",
  "bottleneck>=1.4.2",
  "dustmaps>=1.0.13",
  "h5py>=3.12.1",
  "healpy>=1.18.0",
  "matplotlib>=3.9.2",
  "numpy>=2.1.3",
  "pre-commit>=4.0.1",
  "scikit-learn>=1.5.2",
  "scipy>=1.14.1",
  "tqdm>=4.67.0",
]


[project.urls]
Homepage = "https://github.com/BASTAcode/BASTA"
Documentation = "https://basta.readthedocs.io"
Issues = "https://github.com/BASTAcode/BASTA/issues"
Repository = "https://github.com/BASTAcode/BASTA.git"


[project.scripts]
BASTArun = "basta.run:main"
BASTAmultirun = "basta.run:multi"
BASTAdownload = "basta.downloader:main"
BASTAexamples = "basta.downloader_examples:main"
